corrections on some text and text align in footer

--- a/styles/index.css
+++ b/styles/index.css
@@ -46,6 +46,8 @@ h1 {
 }
 
 li {
+  display: flex;
+  justify-content: center;
   list-style-type: none;
   padding: 0 10px;
 }
@@ -87,7 +89,7 @@ nav ul {
     display: block;
   }
   .main-nav #icons:before {
-    content: "\2630"; /* Unicode for hamburger menu */
+    content: "\2630";
     font-size: 30px;
     color: #ffffff;
   }
@@ -152,7 +154,7 @@ nav ul {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(0, 0, 0, 0.45);
   z-index: 0;
 }
 
